feat(proj cleaning): swagger upgrated; db module added; envconfig added; decomposition implemented;

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-PORT=9000
-DB_HOST=postgres
+PORT=3000
+HOST=http://localhost:3000
+
+DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
-DB_DATABASE=postgres
-DB_PASSWORD=Sql_Password_228_kek
+DB_DATABASE=github-case
+DB_PASSWORD=admin
 
