--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     container_name: postgres
     image: postgres:12
     env_file:
-      - .env
+      - docker.env
     environment:
       PG_DATA: /var/lib/postgresql/data
       POSTGRES_PASSWORD: Sql_Password_228_kek
